# voice-recorder

./: .agentrules  AGENT.md  PROJECT_CONSTITUTION.md  README.md  analize.md  package-lock.json  package.json
public/: noise-gate-processor.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: editing.rs  live_mic.rs  mod.rs  preview.rs  recording.rs  separate.rs
src-tauri/src/core/: mod.rs  models.rs  traits.rs
src-tauri/src/infra/: audio_analysis.rs  audio_cpal.rs  dsp_engine.rs  live_audio.rs  mod.rs  pipeline.rs  storage_local.rs  voice_layer_engine.rs  voice_preset.rs
src-tauri/src/infra/filters/: biquad.rs  breath_suppressor.rs  bypass.rs  eq_shelf.rs  final_limiter.rs  hum_removal.rs  mic_eq.rs  mid_cut.rs  mod.rs  noise_gate.rs  plosive_reducer.rs  spectral_dehiss.rs  wind_suppressor.rs
src-tauri/src/infra/separator/: engine.rs  mdxnet.rs  mod.rs  model_cache.rs  stft_helper.rs
src/components/editor/: VocalSeparationPanel.tsx  VoiceFiltersPanel.tsx  WaveformEditor.tsx
src/components/editor/filter-groups/: BreathPlosiveGroup.tsx  EqToneGroup.tsx  FilterGroupHeader.tsx  NoiseWindGroup.tsx  ToggleWithSlider.tsx  VocalCleanupGroup.tsx  VoicePresetsGroup.tsx
src/components/visualizer/: AudioVisualizer.tsx  LiveSpectrumAnalyzer.tsx
src/hooks/: useAudioRecorder.ts  useSeparation.ts  useVoiceFilters.ts
src/pages/: LibraryPage.tsx  LiveMicStudio.tsx  ProEQPage.css  ProEQPage.tsx  RecordingPage.tsx  SettingsPage.tsx  VoiceDetailStudio.tsx
src/services/: audioService.ts
