[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# ── Vocal Source Separation ────────────────────────────────────────────────────
# ort: ONNX Runtime 2 bindings — download-binaries fetches onnxruntime.dll at
# compile time; copy-dylibs places it next to the binary for dev mode.
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "copy-dylibs"] }
# rustfft: pure-Rust FFT for STFT/iSTFT processing pipeline
rustfft = "6"
# ndarray: N-dimensional arrays for ONNX tensor I/O
ndarray = "0.15"
